allprojects {
    group = 'com.jdriven'
    version = '1.0-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    sourceCompatibility = 17
    targetCompatibility = 17

    compileJava {
        options.compilerArgs += ["--enable-preview"]
    }

    compileTestJava {
        options.compilerArgs += ["--enable-preview"]
    }

    test {
        jvmArgs(['--enable-preview'])
        useJUnitPlatform()
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }

    dependencies {
        implementation group: 'commons-io', name: 'commons-io', version: '2.6'
        implementation group: 'org.mockito', name: 'mockito-core', version: '4.3.1'
        implementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.3.1'
        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.2'
        testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
        testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.32.0'
    }
}
